--- a/PunktestandJeopardy/View/MainWindow.xaml
+++ b/PunktestandJeopardy/View/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="PunktestandJeopardy.MainWindow"
+﻿<Window x:Class="PunktestandJeopardy.View.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
