--- a/PunktestandJeopardy/View/QuestionWindow.xaml
+++ b/PunktestandJeopardy/View/QuestionWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="BoardJeopardy.QuestionWindow"
+﻿<Window x:Class="BoardJeopardy.View.QuestionWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -7,7 +7,7 @@
         Title=""
         WindowStartupLocation="CenterScreen">
     <Window.Resources>
-        <FontFamily x:Key="CoolFont"> pack://application:,,,/font.ttf#JetBrains Mono </FontFamily>
+        <FontFamily x:Key="CoolFont"> pack://application:,,,/Resources/font.ttf#JetBrains Mono </FontFamily>
 
         <Style x:Key="CoolLabelTextBlock"
                TargetType="Label">
@@ -45,45 +45,6 @@
                                        Height="Auto"
                                        Width="Auto"
                                        TextAlignment="{TemplateBinding HorizontalContentAlignment}" />
-                        </Grid>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-
-        <Style x:Key="CoolLabel"
-               TargetType="Label">
-            <Setter Property="Background"
-                    Value="Azure" />
-
-            <Setter Property="Foreground"
-                    Value="Black" />
-
-            <Setter Property="FontFamily"
-                    Value="{StaticResource CoolFont}" />
-
-            <Setter Property="BorderThickness"
-                    Value="0" />
-
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="Label">
-                        <Grid x:Name="RootGrid"
-                              Background="{TemplateBinding Background}"
-                              Width="{TemplateBinding Width}"
-                              Height="{TemplateBinding Height}">
-                            <Label Content="{TemplateBinding Content}"
-                                   Foreground="{TemplateBinding Foreground}"
-                                   FontFamily="{TemplateBinding FontFamily}"
-                                   FontSize="{TemplateBinding FontSize}"
-                                   FontWeight="{TemplateBinding FontWeight}"
-                                   Margin="{TemplateBinding Padding}"
-                                   VerticalAlignment="Stretch"
-                                   HorizontalAlignment="Stretch"
-                                   Height="Auto"
-                                   Width="Auto"
-                                   VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
-                                   HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}" />
                         </Grid>
                     </ControlTemplate>
                 </Setter.Value>
