--- a/PunktestandJeopardy/View/UserSelection.xaml
+++ b/PunktestandJeopardy/View/UserSelection.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="PunktestandJeopardy.UserSelection"
+﻿<Window x:Class="PunktestandJeopardy.View.UserSelection"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -10,56 +10,7 @@
         Height="300">
     <Window.Resources>
         <ResourceDictionary>
-            <FontFamily x:Key="CoolFont"> pack://application:,,,/font.ttf#JetBrains Mono </FontFamily>
-
-            <Style x:Key="CoolButton"
-                   TargetType="Button">
-                <Setter Property="FontFamily"
-                        Value="{StaticResource CoolFont}" />
-
-                <Setter Property="FontSize"
-                        Value="20" />
-
-                <Setter Property="Background"
-                        Value="Azure" />
-
-                <Setter Property="Foreground"
-                        Value="Black" />
-
-                <Setter Property="BorderThickness"
-                        Value="0" />
-
-                <Setter Property="Template">
-                    <Setter.Value>
-                        <ControlTemplate TargetType="Button">
-                            <Grid x:Name="RootGrid"
-                                  Background="{TemplateBinding Background}">
-                                <Label Content="{TemplateBinding Content}"
-                                       Foreground="{TemplateBinding Foreground}"
-                                       FontFamily="{TemplateBinding FontFamily}"
-                                       FontSize="{TemplateBinding FontSize}"
-                                       VerticalContentAlignment="Center"
-                                       HorizontalContentAlignment="Center" />
-                            </Grid>
-                            <ControlTemplate.Triggers>
-                                <Trigger Property="IsMouseOver"
-                                         Value="True">
-                                    <Setter TargetName="RootGrid"
-                                            Property="Background"
-                                            Value="LightBlue" />
-                                </Trigger>
-
-                                <Trigger Property="IsPressed"
-                                         Value="True">
-                                    <Setter TargetName="RootGrid"
-                                            Property="Background"
-                                            Value="DeepSkyBlue" />
-                                </Trigger>
-                            </ControlTemplate.Triggers>
-                        </ControlTemplate>
-                    </Setter.Value>
-                </Setter>
-            </Style>
+            <FontFamily x:Key="CoolFont"> pack://application:,,,/Resources/font.ttf#JetBrains Mono </FontFamily>
 
             <Style x:Key="CoolListViewItem"
                    TargetType="ListViewItem">
@@ -104,29 +55,6 @@
                 </Setter>
             </Style>
 
-            <Style x:Key="CoolListView"
-                   TargetType="ListView">
-                <Setter Property="Background"
-                        Value="Transparent" />
-
-                <Setter Property="FontFamily"
-                        Value="{StaticResource CoolFont}" />
-
-                <Setter Property="FontSize"
-                        Value="20" />
-
-                <Setter Property="Foreground"
-                        Value="Black" />
-
-                <Setter Property="BorderBrush"
-                        Value="Transparent" />
-
-                <Setter Property="BorderThickness"
-                        Value="0" />
-
-                <Setter Property="ItemContainerStyle"
-                        Value="{StaticResource CoolListViewItem}" />
-            </Style>
         </ResourceDictionary>
     </Window.Resources>
 
